--- a/Flightradar24.conf
+++ b/Flightradar24.conf
@@ -1,2 +1,5 @@
-hostname = , mobile.flightradar24.com
+[mitm]
+hostname = mobile.flightradar24.com
+
+[rewrite_local]
 ^https?:\/\/mobile\.flightradar24\.com\/mobile\/(user-session|\w{9}) url script-echo-response https://github.com/ddgksf2013/dev/raw/main/flightradar24.js
